<resources>
    <string name="app_name">FlashCards</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="practice">practice</string>
    <string name="test_name">Name of the deck</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="new_deck">New deck</string>
    <string name="name">Name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="action_delete_all">Delete all</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="main_activity_title">All decks</string>
    <string name="undo">Undo?</string>
    <string name="snackbar_text">Undo delete?</string>
    <string name="snackbar_undo">Undo</string>
    <string name="action_refresh">Refresh</string>
    <string name="saved_text">Saved!</string>
    <string name="action_delete_deck">Delete deck</string>
    <string name="action_rename_deck">Rename deck</string>
    <string name="delete_deck_confirm">Delete this deck?</string>
    <string name="action_go_back">Back</string>
    <string name="got_it">Got it!</string>
    <string name="almost">Almost</string>
    <string name="not_at_all">Nope…</string>
    <string name="mode_adding_card">Adding card</string>
    <string name="mode_editing_card">Editing card</string>
    <string name="unsaved_changes">You have unsaved changes.</string>
    <string name="discard_changes">Discard changes</string>
    <string name="empty_deck_rv">This list is empty. Create a new deck!</string>
    <string name="empty_card_rv">It\'s empty!</string>
    <string name="finished_practice_label">No more cards. Good job!</string>
</resources>
