<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/deck_list_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Name of the deck"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deck_list_item_add_card_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
        <Button
            android:id="@+id/deck_list_item_view_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view" />
        <Button
            android:id="@+id/deck_list_item_practice_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice" />
        <TextView
            android:id="@+id/deck_list_item_cards_total"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="75"/>




    </LinearLayout>
</LinearLayout>