<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeckPracticeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/card_list_item_container"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:background="@drawable/button_almost"
        android:text="@string/almost"
        android:textColor="@color/yellow"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_list_item_container" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:background="@drawable/button_not_at_all"
        android:text="@string/not_at_all"
        android:textColor="@color/red"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_list_item_container" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:background="@drawable/button_got_it"
        android:text="@string/got_it"
        android:textColor="@color/green"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_list_item_container" />


</androidx.constraintlayout.widget.ConstraintLayout>